--- a/index.html
+++ b/index.html
@@ -6,17 +6,82 @@
     <title>Mohammad Abdullah — Full-Stack Software Engineer</title>
     <meta
       name="description"
-      content="Portfolio of Mohammad Abdullah — Full-Stack Software Engineer (Laravel, Vue.js, Nuxt.js React.js, Next.js, Node.js). Based in Dhaka, Bangladesh."
+      content="Portfolio of Mohammad Abdullah — Full-Stack Software Engineer (Laravel, Vue.js, Nuxt.js, React.js, Next.js, Node.js). Based in Dhaka, Bangladesh."
     />
+    <meta name="author" content="Mohammad Abdullah" />
+    <meta
+      name="keywords"
+      content="Mohammad Abdullah, Software Engineer, Full-Stack Developer, Laravel, Vue.js, Nuxt.js, React.js, Next.js, Node.js, PHP, JavaScript, TypeScript, Dhaka, Bangladesh, Portfolio"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Mohammad Abdullah — Full-Stack Software Engineer"
+    />
+    <meta
+      property="og:description"
+      content="Full-Stack Software Engineer (Laravel, Vue.js, Nuxt.js, React.js, Next.js, Node.js) based in Dhaka. Portfolio, experience and contact."
+    />
+    <meta
+      property="og:image"
+      content="./assets/images/og_Mohammad_Abdullah.png"
+    />
+    <meta property="og:image:alt" content="Portfolio of Mohammad Abdullah" />
+    <meta property="og:site_name" content="Mohammad Abdullah Portfolio" />
+    <meta
+      property="og:url"
+      content="https://mohammad-abdullah-self.github.io/"
+    />
+
+    <link rel="canonical" href="https://mohammad-abdullah-self.github.io/" />
+    <meta name="robots" content="index, follow" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-
-    <script src="./assets/tailwindcss-browser@4.js"></script>
-    <script src="./assets/lucide.min.js"></script>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link rel="manifest" href="./manifest.json" />
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+    <link
+      rel="sitemap"
+      type="application/xml"
+      title="Sitemap"
+      href="/sitemap.xml"
+    />
+    <meta name="theme-color" content="#0f1724" />
+    <script src="./assets/js/tailwindcss-browser@4.js"></script>
+    <script src="./assets/js/lucide.min.js"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Mohammad Abdullah",
+        "url": "https://mohammad-abdullah-self.github.io/",
+        "sameAs": [
+          "https://github.com/mohammad-abdullah-self",
+          "https://www.linkedin.com/in/mohammad-abdullah-5654b4176"
+        ],
+        "jobTitle": "Full-Stack Software Engineer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Self-employed"
+        },
+        "image": "https://mohammad-abdullah-self.github.io/assets/images/og_Mohammad_Abdullah.png",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Dhaka",
+          "addressCountry": "Bangladesh"
+        }
+      }
+    </script>
   </head>
   <body class="bg-slate-900 text-slate-300 antialiased font-[Inter] text-sm">
     <div class="max-w-5xl mx-auto px-6 py-10">
