correction seo tags

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>Mohammad Abdullah — Full-Stack Software Engineer</title>
     <meta
       name="description"
@@ -13,6 +14,9 @@
       name="keywords"
       content="Mohammad Abdullah, Software Engineer, Full-Stack Developer, Laravel, Vue.js, Nuxt.js, React.js, Next.js, Node.js, PHP, JavaScript, TypeScript, Dhaka, Bangladesh, Portfolio"
     />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
@@ -24,7 +28,7 @@
     />
     <meta
       property="og:image"
-      content="./assets/images/og_Mohammad_Abdullah.png"
+      content="https://mohammad-abdullah-self.github.io/assets/images/og_Mohammad_Abdullah.png"
     />
     <meta property="og:image:alt" content="Portfolio of Mohammad Abdullah" />
     <meta property="og:site_name" content="Mohammad Abdullah Portfolio" />
@@ -33,15 +37,35 @@
       content="https://mohammad-abdullah-self.github.io/"
     />
 
-    <link rel="canonical" href="https://mohammad-abdullah-self.github.io/" />
-    <meta name="robots" content="index, follow" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Mohammad Abdullah — Full-Stack Software Engineer"
+    />
+    <meta
+      name="twitter:description"
+      content="Full-Stack Software Engineer (Laravel, Vue.js, Nuxt.js, React.js, Next.js, Node.js) based in Dhaka. Portfolio, experience and contact."
+    />
+    <meta
+      name="twitter:image"
+      content="https://mohammad-abdullah-self.github.io/assets/images/og_Mohammad_Abdullah.png"
+    />
+    <!-- Optional: replace with your actual Twitter handle -->
+    <meta name="twitter:site" content="@YourTwitterHandle" />
 
+    <!-- Canonical -->
+    <link rel="canonical" href="https://mohammad-abdullah-self.github.io/" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Favicon & PWA -->
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link
       rel="apple-touch-icon"
@@ -49,16 +73,21 @@
       href="./apple-touch-icon.png"
     />
     <link rel="manifest" href="./manifest.json" />
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+    <meta name="theme-color" content="#0f1724" />
+
+    <!-- Sitemap -->
     <link
       rel="sitemap"
       type="application/xml"
       title="Sitemap"
       href="/sitemap.xml"
     />
-    <meta name="theme-color" content="#0f1724" />
+
+    <!-- Scripts -->
     <script src="./assets/js/tailwindcss-browser@4.js"></script>
     <script src="./assets/js/lucide.min.js"></script>
+
+    <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
