--- a/index.html
+++ b/index.html
@@ -66,13 +66,24 @@
     />
 
     <!-- Favicon & PWA -->
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./apple-touch-icon.png"
+      href="./assets/favicon_io/apple-touch-icon.png"
     />
-    <link rel="manifest" href="./manifest.json" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./assets/favicon_io/site.webmanifest" />
     <meta name="theme-color" content="#0f1724" />
 
     <!-- Sitemap -->
@@ -115,31 +126,38 @@
   <body class="bg-slate-900 text-slate-300 antialiased font-[Inter] text-sm">
     <div class="max-w-5xl mx-auto px-6 py-10">
       <!-- Header -->
-      <header class="flex items-center gap-4 md:gap-6" role="banner">
-        <div class="w-20 h-20 rounded-2xl overflow-hidden" aria-hidden="false">
+      <header
+        class="flex flex-col md:flex-row items-center md:items-start gap-4 md:gap-6 text-center md:text-left p-4"
+        role="banner"
+      >
+        <!-- Profile Image -->
+        <div class="w-24 h-24 md:w-20 md:h-20 rounded-2xl overflow-hidden">
           <img
-            class="w-full h-full rounded-2xl object-cover"
+            class="w-full h-full object-cover rounded-2xl"
             src="./assets/images/Mohammad-Abdullah.jpg"
             alt="Portrait of Mohammad Abdullah"
-            width="80"
-            height="80"
+            width="96"
+            height="96"
           />
         </div>
 
+        <!-- Name and Title -->
         <div>
           <h1 class="text-2xl md:text-3xl font-semibold">Mohammad Abdullah</h1>
           <p class="text-slate-400 mt-1">Full-Stack Software Engineer</p>
-          <p class="text-slate-500 mt-1">
+          <p class="text-slate-500 mt-1 text-sm md:text-base">
             PHP, JavaScript, TypeScript ( Laravel, Vue.js, Nuxt.js, React,
             Next.js )
           </p>
         </div>
 
-        <div class="ml-auto">
+        <!-- Experience Badge -->
+        <div class="mt-3 md:mt-0 md:ml-auto">
           <span
-            class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-cyan-800/40 text-cyan-300 font-medium"
-            >Job Experience: 4 Years 3 Months</span
+            class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-cyan-800/40 text-cyan-300 font-medium text-sm md:text-base"
           >
+            Job Experience: 4 Years 3 Months
+          </span>
         </div>
       </header>
 
