link hover css correction

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
             <address class="not-italic space-y-2">
               <a
-                class="flex items-center gap-2 text-cyan-300 hover:text-cyan-200 transition"
+                class="flex items-center gap-2 text-cyan-300 hover:underline transition"
                 href="mailto:mohammad.abdullah.self@gmail.com"
                 aria-label="Send email to Mohammad Abdullah"
               >
@@ -183,7 +183,7 @@
               </a>
 
               <a
-                class="flex items-center gap-2 text-cyan-300 hover:text-cyan-200 transition"
+                class="flex items-center gap-2 text-cyan-300 hover:underline transition"
                 href="tel:+8801918466185"
                 aria-label="Call Mohammad Abdullah"
               >
@@ -192,7 +192,7 @@
               </a>
 
               <a
-                class="flex items-center gap-2 text-cyan-300 hover:text-cyan-200 transition"
+                class="flex items-center gap-2 text-cyan-300 hover:underline transition"
                 href="https://www.linkedin.com/in/mohammad-abdullah-5654b4176"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -207,7 +207,7 @@
               </a>
 
               <a
-                class="flex items-center gap-2 text-cyan-300 hover:text-cyan-200 transition"
+                class="flex items-center gap-2 text-cyan-300 hover:underline transition"
                 href="https://github.com/mohammad-abdullah-self"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -217,7 +217,7 @@
                 <span>GitHub</span>
               </a>
 
-              <div class="flex items-center gap-2 text-cyan-300">
+              <div class="flex items-center gap-2">
                 <i data-lucide="map-pin" class="w-4 h-4" aria-hidden="true"></i>
                 <span>Uttara, Dhaka, Bangladesh</span>
               </div>
