--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./assets/favicon_io/apple-touch-icon.png"
+      href="./apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/favicon_io/favicon-32x32.png"
+      href="./favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./assets/favicon_io/favicon-16x16.png"
+      href="./favicon-16x16.png"
     />
-    <link rel="manifest" href="./assets/favicon_io/site.webmanifest" />
+    <link rel="manifest" href="./site.webmanifest" />
     <meta name="theme-color" content="#0f1724" />
 
     <!-- Sitemap -->
