--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="max-w-5xl mx-auto px-6 py-10">
       <!-- Header -->
       <header
-        class="flex flex-col md:flex-row items-center md:items-start gap-4 md:gap-6 text-center md:text-left p-4"
+        class="flex flex-col md:flex-row items-center md:items-start gap-4 md:gap-6 text-center md:text-left"
         role="banner"
       >
         <!-- Profile Image -->
