--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <h1 class="text-2xl md:text-3xl font-semibold">Mohammad Abdullah</h1>
           <p class="text-slate-400 mt-1">Full-Stack Software Engineer</p>
           <p class="text-slate-500 mt-1 text-sm md:text-base">
-            PHP, JavaScript, TypeScript ( Laravel, Vue.js, Nuxt.js, React,
+            PHP, JavaScript, TypeScript ( Laravel, Vue.js, Nuxt.js, React.js,
             Next.js )
           </p>
         </div>
@@ -263,7 +263,7 @@
                     >Nuxt.js</span
                   >
                   <span class="px-3 py-1 rounded-md bg-[rgba(255,255,255,0.03)]"
-                    >React</span
+                    >React.js</span
                   >
                   <span class="px-3 py-1 rounded-md bg-[rgba(255,255,255,0.03)]"
                     >Next.js</span
@@ -397,8 +397,8 @@
             <p class="mt-2">
               Full-Stack Software Engineer with 4+ years of experience
               developing scalable web applications and enterprise solutions.
-              Skilled in Laravel, Vue.js, Nuxt.js, React, Next.js, and Node.js
-              with hands-on experience in eCommerce, HRM systems, SaaS
+              Skilled in Laravel, Vue.js, Nuxt.js, React.js, Next.js, and
+              Node.js with hands-on experience in eCommerce, HRM systems, SaaS
               platforms, and healthcare solutions. Passionate about writing
               clean, maintainable code and contributing to team success in
               fast-paced environments.
